--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "17.2.0",
     "@ngx-translate/core": "15.0.0",
     "@ngx-translate/http-loader": "8.0.0",
-    "firebase": "10.5.2",
+    "firebase": "10.8.1",
     "rxjs": "7.8.0",
     "tslib": "2.3.0",
     "zone.js": "0.14.3"
@@ -46,7 +46,7 @@
     "karma-coverage": "2.2.0",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
-    "ngx-build-plus": "^17.0.0",
+    "ngx-build-plus": "17.0.0",
     "typescript": "5.3.2"
   }
 }
