--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
 							"src/assets"
 						],
 						"styles": [
-							"src/styles.scss"
+							"src/styles.scss",
+							"node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
 						],
 						"scripts": [],
 						"main": "src/main.ts",
@@ -100,7 +101,8 @@
 							"src/assets"
 						],
 						"styles": [
-							"src/styles.scss"
+							"src/styles.scss",
+							"node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
 						],
 						"scripts": []
 					}
