--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngx-translate/core": "15.0.0",
     "@ngx-translate/http-loader": "8.0.0",
     "firebase": "10.8.1",
+    "ng-zorro-antd": "17.2.0",
     "rxjs": "7.8.0",
     "tslib": "2.3.0",
     "zone.js": "0.14.3"
@@ -47,6 +48,7 @@
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
     "ngx-build-plus": "17.0.0",
-    "typescript": "5.3.2"
+    "typescript": "5.3.2",
+    "postcss": "8.4.29"
   }
 }
