--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,12 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@tt-library-angular-porfolio": [
+        "../tt-library-angular-porfolio/dist/tt-library-angular-porfolio/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
