--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "dom"
     ],
     "paths": {
-      "@tt-library-angular-porfolio": [
+      "tt-library-angular-porfolio": [
         "../tt-library-angular-porfolio/dist/tt-library-angular-porfolio/*"
       ]
     }
