new federation module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     ],
     "paths": {
       "tt-library-angular-porfolio": [
-        "../tt-library-angular-porfolio/dist/tt-library-angular-porfolio/*"
+        "../tt-library-angular-porfolio/dist/tt-library-angular-porfolio/"
       ]
     }
   },
