--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ng-zorro-antd": "17.2.0",
     "rxjs": "7.8.0",
     "tslib": "2.3.0",
+    "tt-library-angular-porfolio": "1.0.1",
     "zone.js": "0.14.3"
   },
   "devDependencies": {
@@ -49,8 +50,8 @@
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
     "ngx-build-plus": "17.0.0",
-    "typescript": "5.3.2",
     "postcss": "8.4.29",
-    "tailwindcss": "3.3.5"
+    "tailwindcss": "3.3.5",
+    "typescript": "5.3.2"
   }
 }
