--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/cli": "17.2.2",
     "@angular/compiler-cli": "17.2.0",
     "@types/jasmine": "5.1.0",
+    "@types/node": "20.12.7",
     "@typescript-eslint/eslint-plugin": "7.1.1",
     "@typescript-eslint/parser": "7.1.1",
     "eslint": "8.57.0",
@@ -49,8 +50,8 @@
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
     "ngx-build-plus": "17.0.0",
-    "typescript": "5.3.2",
     "postcss": "8.4.29",
-    "tailwindcss": "3.3.5"
+    "tailwindcss": "3.3.5",
+    "typescript": "5.3.2"
   }
 }
