add gooogle verification

--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,7 @@
 							"src/favicon.ico",
 							"src/assets",
 							"src/sitemap.xml",
-							"src/robots.txt",
-							"src/googlec6f794ea85903dc1.html"
+							"src/robots.txt"
 						],
 						"styles": [
 							"src/styles.scss",
