--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ng-zorro-antd": "17.2.0",
     "rxjs": "7.8.0",
     "tslib": "2.3.0",
+    "vue": "3.4.30",
     "zone.js": "0.14.3"
   },
   "devDependencies": {
